--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "daisyui": "^2.51.4",
+    "jsonwebtoken": "^9.0.0",
     "next": "^13.2.1",
     "nookies": "^2.5.2",
     "react": "18.2.0",
